--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'junit:junit:4.13.1'
     compileOnly 'org.projectlombok:lombok'
     implementation 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
@@ -35,6 +36,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
+    implementation 'com.h2database:h2'
 }
 
 
