--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
     implementation 'com.h2database:h2'
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson/jackson-bom
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.16.1'
+
 }
 
 
